# meapy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.lambda  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: bench_rolling_mean.py
docs/: article-draft.md
examples/: heat_exchanger_analysis.py  pump_commissioning.py
infra/: api_gateway.tf  backend.tf  deploy.sh  lambda.tf  main.tf  oidc.tf  outputs.tf  variables.tf
infra/cloudrun/: main.tf
src/meapy/: __init__.py  __main__.py  _validation.py  cloudrun_server.py  column.py  constants.py  heat_transfer.py  lambda_handler.py  mass_transfer.py  pump.py  session.py  utils.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_column.py  test_heat_transfer.py  test_lambda_handler.py  test_mass_transfer.py  test_pump.py  test_session.py  test_utils.py  test_validation.py
