[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meapy"
version = "0.1.0"
description = "MEA Carbon Capture Process Analysis Library — heat transfer, mass transfer, and pump commissioning for packed-bed CO₂ absorption pilots."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Defne Nihal Ertugrul", email = "defne.ertugrul22@imperial.ac.uk" },
]
keywords = [
    "carbon capture",
    "MEA",
    "monoethanolamine",
    "heat transfer",
    "mass transfer",
    "packed column",
    "chemical engineering",
    "pilot plant",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
data = [
    "pandas>=2.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "numpydoc>=1.7",
]

[project.urls]
Homepage       = "https://github.com/defnalk/meapy"
Documentation  = "https://meapy.readthedocs.io"
Repository     = "https://github.com/defnalk/meapy"
"Bug Tracker"  = "https://github.com/defnalk/meapy/issues"
Changelog      = "https://github.com/defnalk/meapy/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
meapy = ["py.typed"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --cov=meapy --cov-report=term-missing"
markers     = [
    "integration: marks tests as integration tests (deselect with -m 'not integration')",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source  = ["src/meapy"]
branch  = true
omit    = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty   = true

[tool.ruff]
line-length    = 100
target-version = "py310"
src            = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle (Google)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    "D205", "D301", "D400", "D401",
    "S101",
    "N803", "N806",
    "B905",
    "E741",
    "F841",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "S"]

[tool.mypy]
python_version  = "3.10"
strict          = true
ignore_missing_imports = true
warn_return_any = true
files           = ["src/meapy"]
exclude         = ["src/meapy/cloudrun_server\\.py$"]

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
